--- a/stack-806.yaml
+++ b/stack-806.yaml
@@ -1,13 +1,10 @@
-resolver: lts-9.5
+resolver: lts-14.9
+
+flags: {}
 packages:
 - '.'
 
-extra-deps:
-- equational-reasoning-0.5.1.0
-
-flags: {}
-
-pvp-bounds: both
+allow-newer: true
 
 extra-deps:
 - equational-reasoning-0.6.0.0
